cc: Fix for synced property main thread updates with MFBA.

Main thread before activation allows sending BeginMainFrames while there
is a pending tree. In this mode pulling deltas from SyncedProperty for
BeginMainFrame should not be incorrect in between commit and activation
of a previous frame.

BUG=616086
CQ_INCLUDE_TRYBOTS=tryserver.blink:linux_blink_rel

Review-Url: https://codereview.chromium.org/2035543003
Cr-Commit-Position: refs/heads/master@{#399079}

Former-commit-id: d2580f5c4fd242f3b0bfe03fbad71e4db5b5fa08